# docs/swagger.yaml
@@ -7,103 +7,6 @@ definitions:
       error_status:
         type: integer
     type: object
-  models.Address:
-    properties:
-      created_at:
-        type: string
-      deleted_at:
-        type: string
-      domain:
-        type: string
-      expires_at:
-        type: string
-      first_seen:
-        type: string
-      group:
-        $ref: '#/definitions/models.Group'
-      group_id:
-        type: integer
-      host_fqdn:
-        type: string
-      hostname:
-        type: string
-      id:
-        type: integer
-      ilo_api_flavour:
-        type: string
-      ilo_fqdn:
-        type: string
-      ilo_ip:
-        type: string
-      ilo_password:
-        type: string
-      ilo_port:
-        type: string
-      ilo_user:
-        type: string
-      ip:
-        type: string
-      ks:
-        type: string
-      last_seen:
-        type: string
-      last_seen_relay:
-        description: DHCP parameters
-        type: string
-      mac:
-        type: string
-      missing_options:
-        type: string
-      pool:
-        $ref: '#/definitions/models.Pool'
-      pool_id:
-        type: integer
-      progress:
-        type: integer
-      progresstext:
-        type: string
-      reimage:
-        type: boolean
-      updated_at:
-        type: string
-    type: object
-  models.DeviceAddressForm:
-    properties:
-      domain:
-        type: string
-      group_id:
-        type: integer
-      host_fqdn:
-        type: string
-      hostname:
-        type: string
-      ilo_api_flavour:
-        type: string
-      ilo_fqdn:
-        type: string
-      ilo_ip:
-        type: string
-      ilo_password:
-        type: string
-      ilo_port:
-        type: string
-      ilo_user:
-        type: string
-      ip:
-        type: string
-      ks:
-        type: string
-      mac:
-        type: string
-      pool_id:
-        type: integer
-      progress:
-        type: integer
-      progresstext:
-        type: string
-      reimage:
-        type: boolean
-    type: object
   models.DeviceClass:
     properties:
       created_at:
@@ -130,7 +33,7 @@ definitions:
     properties:
       address:
         items:
-          $ref: '#/definitions/models.Address'
+          $ref: '#/definitions/models.Host'
         type: array
       bootdisk:
         type: string
@@ -202,6 +105,103 @@ definitions:
       vlan:
         type: string
     type: object
+  models.Host:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      domain:
+        type: string
+      expires_at:
+        type: string
+      first_seen:
+        type: string
+      group:
+        $ref: '#/definitions/models.Group'
+      group_id:
+        type: integer
+      host_fqdn:
+        type: string
+      hostname:
+        type: string
+      id:
+        type: integer
+      ilo_api_flavour:
+        type: string
+      ilo_fqdn:
+        type: string
+      ilo_ip:
+        type: string
+      ilo_password:
+        type: string
+      ilo_port:
+        type: string
+      ilo_user:
+        type: string
+      ip:
+        type: string
+      ks:
+        type: string
+      last_seen:
+        type: string
+      last_seen_relay:
+        description: DHCP parameters
+        type: string
+      mac:
+        type: string
+      missing_options:
+        type: string
+      pool:
+        $ref: '#/definitions/models.Pool'
+      pool_id:
+        type: integer
+      progress:
+        type: integer
+      progresstext:
+        type: string
+      reimage:
+        type: boolean
+      updated_at:
+        type: string
+    type: object
+  models.HostAddressForm:
+    properties:
+      domain:
+        type: string
+      group_id:
+        type: integer
+      host_fqdn:
+        type: string
+      hostname:
+        type: string
+      ilo_api_flavour:
+        type: string
+      ilo_fqdn:
+        type: string
+      ilo_ip:
+        type: string
+      ilo_password:
+        type: string
+      ilo_port:
+        type: string
+      ilo_user:
+        type: string
+      ip:
+        type: string
+      ks:
+        type: string
+      mac:
+        type: string
+      pool_id:
+        type: integer
+      progress:
+        type: integer
+      progresstext:
+        type: string
+      reimage:
+        type: boolean
+    type: object
   models.Image:
     properties:
       created_at:
@@ -239,7 +239,7 @@ definitions:
   models.Option:
     properties:
       address:
-        $ref: '#/definitions/models.Address'
+        $ref: '#/definitions/models.Host'
       address_id:
         type: integer
       created_at:
@@ -399,7 +399,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Address'
+              $ref: '#/definitions/models.Host'
             type: array
         "500":
           description: Internal Server Error
@@ -417,14 +417,14 @@ paths:
         name: item
         required: true
         schema:
-          $ref: '#/definitions/models.DeviceAddressForm'
+          $ref: '#/definitions/models.HostAddressForm'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Address'
+            $ref: '#/definitions/models.Host'
         "400":
           description: Bad Request
           schema:
@@ -477,7 +477,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Address'
+            $ref: '#/definitions/models.Host'
         "400":
           description: Bad Request
           schema:
@@ -507,14 +507,14 @@ paths:
         name: item
         required: true
         schema:
-          $ref: '#/definitions/models.DeviceAddressForm'
+          $ref: '#/definitions/models.HostAddressForm'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Address'
+            $ref: '#/definitions/models.Host'
         "400":
           description: Bad Request
           schema:
@@ -540,14 +540,14 @@ paths:
         name: item
         required: true
         schema:
-          $ref: '#/definitions/models.Address'
+          $ref: '#/definitions/models.Host'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Address'
+            $ref: '#/definitions/models.Host'
         "400":
           description: Bad Request
           schema:
@@ -1355,7 +1355,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Address'
+            $ref: '#/definitions/models.Host'
         "400":
           description: Bad Request
           schema:
