# models/group.go
@@ -40,9 +40,9 @@ type Group struct {
 
 	GroupForm
 
-	Pool    *Pool     `json:"pool,omitempty" gorm:"foreignkey:PoolID"`
-	Option  []Option  `json:"option,omitempty" gorm:"foreignkey:PoolID"`
-	Address []Address `json:"address,omitempty" gorm:"foreignkey:GroupID"`
+	Pool    *Pool    `json:"pool,omitempty" gorm:"foreignkey:PoolID"`
+	Option  []Option `json:"option,omitempty" gorm:"foreignkey:PoolID"`
+	Address []Host   `json:"address,omitempty" gorm:"foreignkey:GroupID"`
 
 	CreatedAt time.Time  `json:"created_at"`
 	UpdatedAt time.Time  `json:"updated_at"`
@@ -54,9 +54,9 @@ type NoPWGroup struct {
 
 	NoPWGroupForm
 
-	Pool    *Pool     `json:"pool,omitempty" gorm:"foreignkey:PoolID"`
-	Option  []Option  `json:"option,omitempty" gorm:"foreignkey:PoolID"`
-	Address []Address `json:"address,omitempty" gorm:"foreignkey:GroupID"`
+	Pool    *Pool    `json:"pool,omitempty" gorm:"foreignkey:PoolID"`
+	Option  []Option `json:"option,omitempty" gorm:"foreignkey:PoolID"`
+	Address []Host   `json:"address,omitempty" gorm:"foreignkey:GroupID"`
 
 	CreatedAt time.Time  `json:"created_at"`
 	UpdatedAt time.Time  `json:"updated_at"`
